--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>    
     <title>Shopping Cart II</title>
 </head>
 <body class="">
@@ -47,5 +46,6 @@
             <button class="checkOut">CHECK OUT</button>
         </div>
     </div>
+    <script src="index.js"></script>    
 </body>
 </html>
